--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -13,7 +13,7 @@
     <EditText
         android:id="@+id/etFirstname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_marginBottom="16dp"
         android:hint="First Name"
         android:padding="10dp"
@@ -23,7 +23,7 @@
     <EditText
         android:id="@+id/etLastname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:layout_marginBottom="16dp"
         android:hint="Last Name"
         android:padding="10dp"
@@ -33,27 +33,38 @@
     <EditText
         android:id="@+id/etPhone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="54dp"
         android:layout_marginBottom="16dp"
         android:hint="Phone"
         android:padding="10dp"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/etGender"
-        android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Gender"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+
+    <RadioGroup
+        android:id="@+id/radioGenderGroup"
+        android:layout_width="369dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioMale"
+            android:layout_width="94dp"
+            android:layout_height="wrap_content"
+            android:text="Nam" />
+
+        <RadioButton
+            android:id="@+id/radioFemale"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="Nữ" />
+    </RadioGroup>
+
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:layout_marginBottom="16dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -64,7 +75,7 @@
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="63dp"
         android:layout_marginBottom="16dp"
         android:hint="@string/password"
         android:padding="10dp"
@@ -74,7 +85,7 @@
     <EditText
         android:id="@+id/etBirthday"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="62dp"
         android:layout_marginBottom="16dp"
         android:hint="YYYY-MM-DD"
         android:padding="10dp"
