--- a/app/src/main/res/layout/activity_your_journey.xml
+++ b/app/src/main/res/layout/activity_your_journey.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".customer.activities.ShowroomActivity">
+    tools:context=".customer.activities.YourJourneyActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,16 +29,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <SearchView
-                        android:id="@+id/searchBar"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="fill_horizontal"
-                        android:iconifiedByDefault="false"
-                        android:layoutDirection="ltr"
-                        android:orientation="horizontal"
-                        android:queryHint="Tìm kiếm ở đây..."
-                        tools:ignore="MissingConstraints" />
+                        android:text="Hành trình của bạn"
+                        android:textColor="@color/Green"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        tools:layout_editor_absoluteX="88dp"
+                        tools:layout_editor_absoluteY="0dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,5 +63,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/menu_bottom" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
 
+</androidx.constraintlayout.widget.ConstraintLayout>
