--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -10,90 +10,119 @@
     android:background="@android:color/white"
     tools:context=".customer.activities.MyAccount">
 
-    <EditText
-        android:id="@+id/etFirstname"
+    <LinearLayout
+        android:id="@+id/headerLayout"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
-        android:hint="First Name"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content"
+        android:background="@color/Green"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="32dp"
+        android:paddingBottom="16dp">
 
-    <EditText
-        android:id="@+id/etLastname"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Last Name"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/userNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Thông Tin Cá Nhân"
+            android:textColor="@color/White"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/etPhone"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Phone"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etFirstname"
+            android:hint="First Name"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:autofillHints="name"
+            android:inputType="text"
+            android:textSize="12sp"  />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etLastname"
+            android:hint="Last Name"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:autofillHints="name"
+            android:inputType="text"
+            android:textSize="12sp"  />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPhone"
+            android:hint="Phone Num"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:autofillHints="name"
+            android:inputType="text"
+            android:textSize="12sp"  />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <RadioGroup
         android:id="@+id/radioGenderGroup"
-        android:layout_width="369dp"
+        android:layout_width="381dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/radioMale"
-            android:layout_width="94dp"
+            android:layout_width="135dp"
             android:layout_height="wrap_content"
             android:text="Nam" />
 
         <RadioButton
             android:id="@+id/radioFemale"
-            android:layout_width="90dp"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:text="Nữ" />
     </RadioGroup>
 
 
-    <EditText
-        android:id="@+id/etEmail"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:layout_marginBottom="16dp"
-        android:hint="@string/password"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:autofillHints="emailAddress"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:textSize="12sp"  />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <EditText
-        android:id="@+id/etBirthday"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="false"
-        android:hint="DD/MM/YYYY"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etBirthday"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:hint="Birthday"
+            android:inputType="date"
+            android:textSize="12sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnSave"
