--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -23,7 +23,7 @@
             android:id="@+id/userProfileImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/eye_showing"
+            android:src="@drawable/img_3"
             android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"
             android:importantForAccessibility="no" />
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="Lê Nguyễn Gia Huy"
             android:textSize="24sp"
-            android:textColor="@color/notYellow"
+            android:textColor="@color/White"
             android:textStyle="bold"
             android:layout_marginTop="8dp"/>
     </LinearLayout>
