--- a/app/src/main/res/layout/activity_your_journey.xml
+++ b/app/src/main/res/layout/activity_your_journey.xml
@@ -5,12 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="12dp"
-    tools:context=".customer.activities.YourJourneyActivity">
+    android:padding="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
 
         <ScrollView
             android:id="@+id/scrollview"
@@ -36,8 +40,8 @@
                         android:textColor="@color/Green"
                         android:textSize="25sp"
                         android:textStyle="bold"
-                        tools:layout_editor_absoluteX="88dp"
-                        tools:layout_editor_absoluteY="0dp" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +49,7 @@
                     android:layout_height="match_parent">
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/listViewVehicle"
+                        android:id="@+id/listCartItem"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -62,6 +66,7 @@
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/menu_bottom" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
