--- a/app/src/main/res/layout/item_cardview_vehicle.xml
+++ b/app/src/main/res/layout/item_cardview_vehicle.xml
@@ -14,7 +14,8 @@
             android:gravity="top"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="20dp">
+            tools:layout_editor_absoluteY="20dp"
+            tools:ignore="MissingConstraints">
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,9 +38,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp">
                 <TextView
+                    android:id="@+id/brand"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Địa điểm ở đây"
+                    android:text="Hãng xe"
                     android:textSize="15sp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -64,7 +66,7 @@
                     android:id="@+id/QuantityDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="so chuyen da di"
+                    android:text="Text"
                     android:textSize="15sp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +77,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
                     <TextView
-                        android:id="@+id/Quantity"
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="550K"
