--- a/app/src/main/res/layout/item_your_journey_vehicle.xml
+++ b/app/src/main/res/layout/item_your_journey_vehicle.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             app:cardCornerRadius="36dp">
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/imgVehicle"
                 android:layout_width="wrap_content"
                 android:layout_height="209dp"
                 android:src="@drawable/uhh" />
@@ -25,7 +25,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/tenXe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
@@ -55,6 +55,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
