--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -63,6 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/admin_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/nav_admin_graph"
             />
 
     </LinearLayout>
