--- a/app/src/main/res/menu/activity_admin_menu.xml
+++ b/app/src/main/res/menu/activity_admin_menu.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
-        <item android:id="@+id/nav_item_one"
+    <item
+        android:id="@+id/home"
+        android:title="Trang chủ" />
+
+
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_item_one"
+            android:checked="true"
             android:icon="@drawable/baseline_account_circle_24"
             android:title="Người dùng" />
-        <item android:id="@+id/nav_item_two"
+        <item
+            android:id="@+id/nav_item_two"
             android:icon="@drawable/baseline_directions_car_24"
             android:title="Xe" />
-        <item android:id="@+id/nav_item_three"
+        <item
+            android:id="@+id/nav_item_three"
             android:icon="@drawable/baseline_exit_to_app_24"
             android:title="Đơn hàng" />
     </group>
+
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/baseline_exit_to_app_24"
+        android:title="Đăng xuất"/>
 </menu>
