--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_admin_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_admin_graph"
+    app:startDestination="@id/home">
+
+
+    <fragment
+        android:id="@+id/home"
+        android:name="com.example.myandroidproject.admin.fragment.AdminUserFragment"
+        android:label="fragment_nav_home"
+        tools:layout="@layout/fragment_admin_user" >
+    </fragment>
+
+    <fragment
+        android:id="@+id/vehicle"
+        android:name="com.example.myandroidproject.admin.fragment.AdminVehicleFragment"
+        android:label="fragment_nav_home"
+        tools:layout="@layout/fragment_admin_vehicle" >
+    </fragment>
+
+    <action android:id="@+id/action_admin_user" app:destination="@id/home" />
+    <action android:id="@+id/action_admin_vehicle" app:destination="@id/vehicle" />
 
 </navigation>
