--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -11,6 +11,11 @@
         android:name="com.example.myandroidproject.admin.fragment.AdminUserFragment"
         android:label="fragment_nav_home"
         tools:layout="@layout/fragment_admin_user" >
+        <action
+            android:id="@+id/user_list_to_user_detail"
+            app:destination="@id/adminUserDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
     <fragment
@@ -25,6 +30,18 @@
         android:name="com.example.myandroidproject.admin.fragment.AdminOrderFragment"
         android:label="fragment_admin_order"
         tools:layout="@layout/fragment_admin_order" />
+
+    <fragment
+        android:id="@+id/adminUserDetailFragment"
+        android:name="com.example.myandroidproject.AdminUserDetailFragment"
+        android:label="fragment_admin_user_detail"
+        tools:layout="@layout/fragment_admin_user_detail" >
+        <action
+            android:id="@+id/user_detail_to_user_list"
+            app:destination="@id/admin_user"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
 
 
 </navigation>
