--- a/app/src/main/res/navigation/nav_home_graph.xml
+++ b/app/src/main/res/navigation/nav_home_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/customer_home"
         android:name="com.example.myandroidproject.customer.fragments.ShowroomFragment"
         android:label="fragment_nav_home"
-        tools:layout="@layout/fragment_showroom" >
+        tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_customer_home_to_showroomActivity"
             app:destination="@id/showroomActivity"
